# xcppb

./: CMakeLists.txt  README
example/: CMakeLists.txt  connection_test.cpp
include/xcppb/: atom.hpp  auth_info.hpp  colormap.hpp  connection.hpp  cookie.hpp  format.hpp  generic_reply.hpp  keycode.hpp  padding.hpp  protocol_request.hpp  screen.hpp  setup.hpp  visualid.hpp  window.hpp
include/xcppb/auth/: info.hpp
include/xcppb/auth/detail/: get_addr.hpp  get_authptr.hpp
include/xcppb/data/: array.hpp  list.hpp  object.hpp  pad.hpp
include/xcppb/detail/: format_data.hpp  get_addr.hpp  get_authptr.hpp  screen_data.hpp
include/xcppb/detail/setup/: generic.hpp  request.hpp  setup_data.hpp
include/xcppb/event/: generic.hpp
include/xcppb/proto/: grammar.hpp  tokens.hpp  tokens_ctor.hpp  var.hpp  xcb.hpp
include/xcppb/proto/grammar/: attribute.hpp  bit.hpp  config.hpp  enum.hpp  event.hpp  expression.hpp  exprfield.hpp  field.hpp  fieldref.hpp  fields.hpp  import.hpp  item.hpp  list.hpp  macro.hpp  packet_struct.hpp  packet_struct_copy.hpp  pad.hpp  reply.hpp  request.hpp  struct.hpp  tokens.hpp  typedef.hpp  union.hpp  value.hpp  valueparam.hpp  var.hpp  xcb.hpp  xidtype.hpp  xidunion.hpp
include/xcppb/setup/: object.hpp
include/xcppb/setup/detail/: generic.hpp  request.hpp  setup_data.hpp
include/xcppb/xcbgen/: grammar.hpp  var.hpp  xcb.hpp
include/xcppb/xcbgen/attribute/: bit.hpp  enum.hpp  event.hpp  expression.hpp  exprfield.hpp  fieldref.hpp  fields.hpp  import.hpp  item.hpp  list.hpp  macro.hpp  packet_struct.hpp  packet_struct_copy.hpp  reply.hpp  request.hpp  struct.hpp  typedef.hpp  union.hpp  value.hpp  valueparam.hpp  var.hpp  xcb.hpp  xidunion.hpp
include/xcppb/xcbgen/grammar/: attribute.hpp  bit.hpp  config.hpp  enum.hpp  event.hpp  expression.hpp  exprfield.hpp  field.hpp  fieldref.hpp  fields.hpp  import.hpp  item.hpp  list.hpp  macro.hpp  packet_struct.hpp  packet_struct_copy.hpp  pad.hpp  reply.hpp  request.hpp  struct.hpp  tokens.hpp  typedef.hpp  union.hpp  value.hpp  valueparam.hpp  var.hpp  xcb.hpp  xidtype.hpp  xidunion.hpp
src/: CMakeLists.txt  atom.cpp  auth_info.cpp  format.cpp  screen.cpp  setup.cpp
src/auth/: info.cpp
src/auth/detail/: get_addr.cpp
src/detail/: get_addr.cpp
src/proto/: cppgen.cpp  tokens.cpp
src/proto/grammar/: attribute.cpp  bit.cpp  enum.cpp  event.cpp  expression.cpp  exprfield.cpp  field.cpp  fieldref.cpp  fields.cpp  import.cpp  item.cpp  list.cpp  macro.cpp  packet_struct.cpp  packet_struct_copy.cpp  pad.cpp  reply.cpp  request.cpp  struct.cpp  tokens.cpp  typedef.cpp  union.cpp  value.cpp  valueparam.cpp  var.cpp  xcb.cpp  xidtype.cpp  xidunion.cpp
src/setup/: object.cpp
src/xcbgen/: CMakeLists.txt  compile.cpp  cppgen.cpp
src/xcbgen/grammar/: attribute.cpp  bit.cpp  enum.cpp  event.cpp  expression.cpp  exprfield.cpp  field.cpp  fieldref.cpp  fields.cpp  import.cpp  item.cpp  list.cpp  macro.cpp  packet_struct.cpp  packet_struct_copy.cpp  pad.cpp  reply.cpp  request.cpp  struct.cpp  tokens.cpp  typedef.cpp  union.cpp  value.cpp  valueparam.cpp  var.cpp  xcb.cpp  xidtype.cpp  xidunion.cpp
